[gd_scene load_steps=2 format=3 uid="uid://cjuqvxtwmbx33"]

[ext_resource type="Script" uid="uid://dskbnnt13ayhy" path="res://Scripts/MessageCard.gd" id="1_oni06"]

[node name="MessageCard" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_oni06")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ProfilePic" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="VBoxText" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="LabelName" type="Label" parent="HBoxContainer/VBoxText"]
layout_mode = 2

[node name="LabelText" type="Label" parent="HBoxContainer/VBoxText"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
autowrap_mode = 2

[node name="VBoxButtons" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="ButtonIgnore" type="Button" parent="HBoxContainer/VBoxButtons"]
layout_mode = 2
text = "ignora"

[node name="ButtonReply" type="Button" parent="HBoxContainer/VBoxButtons"]
layout_mode = 2
text = "rispondi"

[node name="ButtonReport" type="Button" parent="HBoxContainer/VBoxButtons"]
layout_mode = 2
text = "segnala"
